@startuml mediator_uml


interface ChatSala {
    +enviar(String mensagem, Usuario remetente): void
    +registrarUsuario(Usuario usuario): void
}

class SalaConcreta implements ChatSala {
    -usuarios: List<Usuario>
    +registrarUsuario(Usuario usuario): void
    +enviar(String mensagem, Usuario remetente): void
}

class Usuario {
    -nome: String
    -sala: ChatSala
    +Usuario(String nome, ChatSala sala): void
    +enviar(String mensagem): void
    +receber(String mensagem): void
}

Usuario --> ChatSala : usa
SalaConcreta --> Usuario : mantém
ChatSala <|.. SalaConcreta
@enduml
